[css-flex] Implement the space-evenly content-distribution value

The CSS Box Alignment specification defines the <content-distribution>
set as some of the allowed values for the Content Distribution
properties, align-content and justify-content. The 'space-evenly' value
is not among the ones allowed for these properties according to the CSS
Flexible Box specification.

The CSS Flexbible box specification states that it must follow the CSS
Box Alignment specification, so this new value must be considered as
part of an upgraded level of the spec, which should be implemented
eventually.

Since we have already shipped an implementation of the new CSS Box
Alignment values for CSS Grid Layout, we need to implement it for
Flexbox as well.

This is the intent-to-implement-and-ship request approved for this
change:

https://groups.google.com/a/chromium.org/d/msg/blink-dev/_4wD-NXS6Ik/W51KNjTzAAAJ

BUG=708121

Review-Url: https://codereview.chromium.org/2832503003
Cr-Commit-Position: refs/heads/master@{#474237}

Former-commit-id: 69568ed51b77ef4a94d96f99134e09223acf6223